[package]
name = "ic-agent-ml-data"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = "0.10.9"
ic-agent = "0.37.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "time"] }
serde = "1.0.197"
serde_json = "1.0.114"
serde_bytes = "0.11.14"
csv = "1.3.0"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
tonic-build = "0.11"
candid_parser = "0.1.1"
serde_json = "1.0.110"
convert_case = "0.6.0"
